kubernetes/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app.kubernetes.io/name: ecommerce
    app.kubernetes.io/instance: ecommerce-prod
    app.kubernetes.io/managed-by: argocd
  annotations: 
    kubernetes.io/enforce-policy: restricted
