kubernetes/manifests/ecommerce_deployment.yml
# Deployment for the application ecommerce
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app
  namespace: ecommerce
  labels:
    app: ecommerce-app
    name: ecommerce-app
    component: application
  annotations:
    pdb/enabled: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-app
  template:
    metadata:
      labels:
        app: ecommerce-app
    spec:
      serviceAccountName: ecommerce-app-sa 
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ecommerce-app
          image: titouonee/clouddevops_ecommerce
          command: ['python3', 'manage.py', 'runserver', '0.0.0.0:8000']

          securityContext:
            runAsNonRoot: true
            runAsUser: 999
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
                drop:
                  - ALL 
                  - NET_RAW
            seccompProfile:
              type: RuntimeDefault
          ports:
          - containerPort: 8000
            name: http

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi" 
              cpu: "500m"
      volumes:
        - name: tmp 
          emptyDir: {}      
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  namespace: ecommerce
  labels:
    app: ecommerce-app
spec:
  selector:
    app: ecommerce-app
  ports:
  - name: ecommerce-port
    protocol: TCP 
    port: 80
    targetPort: 8000
  type: ClusterIP
