kubernetes/manifests/postgres_deployment.yml
# Deployment of the postgres database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ecommerce
  labels:
    app: postgres
    name: postgres
    component: database
  annotations:
    pdb/enabled: "true"
    gatekeeper.sh/exempt-rofs: "true"
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres 
    spec :
      serviceAccountName: postgres-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: postgres
          image: bitnami/postgresql@sha256:ac3fdcc36145212217d968ecdc84475749083a8c7f04723d40f7f7aa9ba3abda
          imagePullPolicy: Always

          securityContext:
            runAsNonRoot: true
            runAsUser: 999
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL 
                - NET_RAW
            seccompProfile:
              type: RuntimeDefault

          ports:
            - containerPort: 5432
              protocol: TCP

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: tmp
              mountPath: /tmp

          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi" 
              cpu: "1000m"

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-data-pvc
        - name: tmp 
          emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: ecommerce
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
