kubernetes/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  namespace: ecommerce
  labels:
    app: ecommerce-app
spec:
  selector:
    app: ecommerce-app
  ports:
  - name: ecommerce-port
    protocol: TCP 
    port: 80
    targetPort: 8000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ecommerce
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
